--- a/src/org/tastefuljava/ezguest/gui/AboutDialog.form
+++ b/src/org/tastefuljava/ezguest/gui/AboutDialog.form
@@ -57,7 +57,7 @@
             <Component class="javax.swing.JLabel" name="labeleZGuest">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/splashEasyguest_1.01.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/splashEasyguest_1.01.png"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -373,13 +373,13 @@
                   <Font name="Dialog" size="16" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/ezguest_64.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/ezguest_64.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="resources.properties" key="dialog.about.tabdetail.info" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                 </Property>
                 <Property name="disabledIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/ezguest_64.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/ezguest_64.png"/>
                 </Property>
               </Properties>
               <Constraints>
