--- a/src/org/tastefuljava/ezguest/gui/MapPanel.form
+++ b/src/org/tastefuljava/ezguest/gui/MapPanel.form
@@ -119,7 +119,7 @@
             <Component class="javax.swing.JButton" name="buttonBackMonth">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/backmonth.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/backmonth.png"/>
                 </Property>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                   <Insets value="[0, 0, 0, 0]"/>
@@ -137,7 +137,7 @@
             <Component class="javax.swing.JButton" name="buttonBackWeek">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/backweek.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/backweek.png"/>
                 </Property>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                   <Insets value="[0, 0, 0, 0]"/>
@@ -155,7 +155,7 @@
             <Component class="javax.swing.JButton" name="buttonBackDay">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/backday.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/backday.png"/>
                 </Property>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                   <Insets value="[0, 0, 0, 0]"/>
@@ -203,7 +203,7 @@
             <Component class="javax.swing.JButton" name="buttonNextDay">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/nextday.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/nextday.png"/>
                 </Property>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                   <Insets value="[0, 0, 0, 0]"/>
@@ -221,7 +221,7 @@
             <Component class="javax.swing.JButton" name="buttonNextWeek">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/nextweek.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/nextweek.png"/>
                 </Property>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                   <Insets value="[0, 0, 0, 0]"/>
@@ -239,7 +239,7 @@
             <Component class="javax.swing.JButton" name="buttonNextMonth">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/nextmonth.png"/>
+                  <Image iconType="3" name="/org/tastefuljava/ezguest/images/nextmonth.png"/>
                 </Property>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                   <Insets value="[0, 0, 0, 0]"/>
